--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 <article>
     <h1>张学友介绍</h1>
-    <p id="intro">张学友（Jacky Cheung），1961年7月10日出生于香港，中国香港男歌手、演员，毕业于香港崇文英文书院。
+    <p id="intro">张学友（Jacky Cheung），1961年7月10日出生于香港，中国香港特别行政区男歌手、演员，毕业于香港崇文英文书院。
         1984年因获得首届香港十八区业余歌唱大赛冠军而出道。1985年发行个人首张专辑《Smile》。1993年发行的专辑《吻别》打破华语唱片在台湾的销量纪录 [1]  。<a href="index.html" title="Index">INDEX</a>1995年起连续两年获得世界音乐大奖全球销量最高华人歌手奖 [2-3]
         <a href="about.html" title="About">ABOUT</a>。1997年参与策划的音乐剧《雪狼湖》在香港连续演出42场。1998年获得第9届台湾金曲奖最佳国语男演唱人奖 [4]  。2001年获得第23届十大中文金曲金针奖 [5]  。<a href="photos.html" title="Photos">PHOTOS</a>2004年发行首张个人全创作专辑《Life Is Like A Dream》。<a
                 href="live.html" title="Live">LIVE</a>2010年12月30日至2011年12月29日，举办“张学友1/2世纪世界巡回演唱会”，打破12个月内巡演观众人数的吉尼斯世界纪录 [6]  。<a href="contact.html" title="Contact">CON</a>2013年获得第35届十大中文金曲金曲35周年荣誉大奖 [7]  。2016年举行“A CLASSIC TOUR 学友·经典世界巡回演唱会” [8]  。
